<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home"
        android:title="Home"
        android:icon="@drawable/ic_home_black_24dp"
        app:cnb_iconColor="#fff"
        app:cnb_backgroundColor="@color/colorPrimary"
        app:cnb_textColor="#fff"/>

    <item
        android:id="@+id/trip"
        android:icon="@drawable/ic_place_black_24dp"
        android:title="@string/trip"
        app:cnb_iconColor="#fff"
        app:cnb_backgroundColor="@color/colorPrimary"
        app:cnb_textColor="#fff"/>
    <item
        android:id="@+id/history"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/history"
        app:cnb_iconColor="#fff"
        app:cnb_backgroundColor="@color/colorPrimary"
        app:cnb_textColor="#fff"/>
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile3"
        app:cnb_iconColor="#fff"
        app:cnb_backgroundColor="@color/colorPrimary"
        app:cnb_textColor="#fff"/>

</menu>