<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileDriverActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/white_background">

    <RelativeLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/header_morning"
        android:layout_gravity="center_horizontal"
        android:layout_margin="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">




        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_profile_page"
                android:layout_width="110dp"
                android:layout_height="110dp"
                app:civ_border_width="3dp"
                app:civ_border_color="#EA604E"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="@drawable/avatar_blank"
                android:scaleType="centerCrop"/>


            <ImageView
                android:id="@+id/add_photo"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignEnd="@+id/img_profile_page"
                android:layout_alignBottom="@+id/img_profile_page"
                android:background="@drawable/shape_circle"
                android:elevation="1dp"
                android:padding="5dp"
                android:src="@drawable/ic_add_a_photo_black_24dp"
                android:onClick="changeProfilePicture"
                tools:ignore="OnClick"
                android:contentDescription="@string/image" />


            <TextView
                android:id="@+id/tv_edit_profile"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_profile_page"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/nunitosans_semibold"
                android:onClick="editProfile"
                android:padding="10dp"
                android:text="@string/edit_profil2"
                android:gravity="center"
                android:textSize="10sp"
                tools:ignore="OnClick,SmallSp" />

        </RelativeLayout>


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHeader">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            tools:ignore="SmallSp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <ImageView
                android:id="@+id/icon_name"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="8dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/user_icon"
                android:contentDescription="@string/image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/tv_profil_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:textStyle=""
                    tools:ignore="SmallSp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_marginStart="8dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <ImageView
                android:id="@+id/icon_email"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/email_icon"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/tv_profil_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:textStyle=""
                    tools:ignore="SmallSp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <ImageView
                android:id="@+id/icon_phone"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="8dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/phone_icon"
                android:contentDescription="@string/image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_telepon"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/tv_profil_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:textStyle=""
                    tools:ignore="SmallSp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="69dp"
        android:layout_height="33dp"
        android:background="@drawable/rounded_btn"
        android:fontFamily="@font/nunitosans_semibold"
        android:onClick="logout"
        android:text="@string/logout"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/chipNavigationBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.642"
        tools:ignore="OnClick" />

    <com.ismaeldivita.chipnavigation.ChipNavigationBar
        android:id="@+id/chipNavigationBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/header_navbar"
        android:elevation="10dp"
        android:padding="0dp"
        app:cnb_menuResource="@menu/menu_navigasi"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>